add getTodoItemsByUserId
